<resources>
    <string name="app_name">MotionLayout</string>

    <string name="motion_scene_1">Motion Scene 1</string>
    <string name="motion_scene_2">Motion Scene 2</string>

    <string name="button">Button</string>
    <string name="text_view">TextView</string>
    <string name="scene1">Scene 1</string>
    <string name="scene2">Scene 2</string>
    <string name="scene3">Scene 3</string>
    <string name="scene4">Scene 4</string>
    <string name="scene5">Scene 5</string>
    <string name="scene6">Scene 6</string>
    <string name="scene7">Scene 7</string>
    <string name="scene8">Scene 8</string>
    <string name="scene9">Scene 9</string>
    <string name="scene10">Scene 10</string>
    <string name="wifi_search">Wifi Search Animation</string>
    <string name="start_animation">Start Animation</string>
    <string name="stop_animation">Stop Animation</string>
    <string name="click_button_to_animate">Click on Button to Animate it</string>
    <string name="swipe_view_manually_left_right">Swipe view manually to Left/Right</string>
    <string name="swipe_view_manually_bottom_top">Swipe view manually to Top</string>
    <string name="using_custom_attributes">Animation Using Custom\nAttribute</string>
    <string name="keyframe_animation">Using KeyFrame Animation</string>
    <string name="keyframe_animation_rotation_x">KeyFrame Animation with Rotation\nalong X axis</string>
    <string name="keyframe_animation_rotation_y">KeyFrame Animation with Rotation\nalong Y axis</string>
    <string name="keyframe_animation_rotation">KeyFrame Animation with simple Rotation</string>
    <string name="scale_keyframe_animation">Scale - KeyFrame Animation\ni.e. Change View Size</string>
    <string name="star_animation">Star Animation\n(1 in Bottom to 3 in Top)</string>
    <string name="curve_animation">Curve Animation\ni.e. app:keyPositionType="deltaRelative"</string>
    <string name="synopsis">Synopsis</string>
    <string name="synopsis_text">In No Longer Human, the first-person narrator, Yozo, traces his development and experiences from childhood through his twenty-seventh year. Using the device of a journal kept by the narrator which has been recovered and is being read by someone else, the author has made this book a revelation of his innermost self and a confession of his increasing alienation from society. In fact, the book is highly autobiographical and belongs to the “I novel” genre, a style popular in Japan. Yozo learns very early as a child that he is apparently quite different from the people around him, and he consequently fears these people. Yet he wants to be accepted, so by constantly playing the role of clown, he makes himself popular. He observes in general that people live in mutual distrust and are insincere. On the way home from a political rally sponsored by his father, he overhears family friends saying how idiotic the meeting was; these same friends then congratulate his father on a “wonderful meeting.”</string>
</resources>
