<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/loco_scene_4">

    <!--
    Here android:elevation="6dp" in imageview plays much important role
    To notice what role it plays run app by removing and adding it
    -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardBookDetails"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:gravity="center_vertical"
        android:letterSpacing="0.1"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/synopsis"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="6dp"
        android:lineSpacingMultiplier="1.3"
        android:maxLines="10"
        android:alpha="0"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/synopsis_text"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/cardBookDetails"
        app:layout_constraintStart_toStartOf="@id/cardBookDetails"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/ivBookCover"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:elevation="6dp"
        android:src="@drawable/nolongerhuman" />

</androidx.constraintlayout.motion.widget.MotionLayout>