<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/loco_scene_3">

    <!--
    Here android:elevation="6dp" in imageview plays much important role
    To notice what role it plays run app by removing and adding it
    -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardBookDetails"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="false"
                android:text="@string/synopsis"
                android:textSize="18sp"
                android:textStyle="bold"
                android:letterSpacing="0.1"
                android:textColor="@android:color/background_light"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="10"
                android:lineSpacingMultiplier="1.3"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/synopsis_text"
                android:textColor="@android:color/background_light"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/ivBookCover"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:elevation="6dp"
        android:src="@drawable/nolongerhuman" />

</androidx.constraintlayout.motion.widget.MotionLayout>